# HTLetterspacer

./: .gitignore  HT_LetterSpacer.py  HT_LetterSpacer_UI.py  HT_LetterSpacer_script.py  defaultConfigFile.py  mypy.ini  pyproject.toml
src/htletterspacer/: __main__.py  config.py  core.py
tests/: conftest.py  test_segmentation.py  test_spacer.py
tests/data/Merriweather-LightItalic-Original.ufo/: fontinfo.plist  lib.plist
tests/data/Merriweather-LightItalic-Original.ufo/glyphs/: A_-cy.glif  A_.glif  A_E_.glif  A_E_acute.glif  A_acute.glif  A_breve-cy.glif  A_breve.glif  A_breveacute.glif  A_brevedotbelow.glif  A_brevegrave.glif  A_brevehookabove.glif  A_brevetilde.glif  A_caron.glif  A_circumflex.glif  A_circumflexacute.glif  A_circumflexdotbelow.glif  A_circumflexgrave.glif  A_circumflexhookabove.glif  A_circumflextilde.glif  A_dblgrave.glif  A_dieresis-cy.glif  A_dieresis.glif  A_dotbelow.glif  A_grave.glif  A_hookabove.glif  A_ie-cy.glif  A_invertedbreve.glif  A_macron.glif  A_ogonek.glif  A_ring.glif  A_ringacute.glif  A_tilde.glif  B_.glif  B_dotaccent.glif  B_dotbelow.glif  B_e-cy.glif  C_.glif  C_acute.glif  C_caron.glif  C_cedilla.glif  (+1484 more)
tests/data/Merriweather-LightItalic-Respaced.ufo/: groups.plist  kerning.plist  layercontents.plist
tests/data/Merriweather-LightItalic.ufo/: groups.plist  lib.plist
tests/data/MutatorSansBoldCondensed-Respaced.ufo/: features.fea  fontinfo.plist  groups.plist  lib.plist
tests/data/MutatorSansBoldCondensed.ufo/: lib.plist
tests/data/NestedComponents.ufo/: lib.plist
tests/data/Respaced.ufo/: fontinfo.plist
(+3345 files in other folders)
