[tool.poetry]
name = "htletterspacer"
version = "1.11"
description = "HT Letterspacer is a tool for spacing fonts"
authors = ["Your Name <you@example.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
