[tool.poetry]
name = "htletterspacer"
version = "1.11"
description = "HT Letterspacer is a tool for spacing fonts"
authors = ["Your Name <you@example.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.6"
ufoLib2 = ">=0.11.1"
glyphsLib = "^5.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.2"
pytest-tldr = "^0.2.2"
hypothesis = "^6.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
